# project_x_the_r4v3n

./: .gitignore  CMakeLists.txt  Develop.txt  Feature.txt  LICENSE  Planning.yaml  README.md
.github/workflows/: CAN_Messages_pipline.yaml  File_IO_pipline.yaml  project_x_main.yaml
CAN_Messages/: CMakeLists.txt  README.md  arg_gården.py  c_make_list.txt  signals.json  signals.py
CAN_Messages/Output/include/: README.md
CAN_Messages/Output/include/can_messages/: README.md  signals.h
CAN_Messages/Output/src/: README.md  signals.cpp
CAN_Messages/our_informator/: info.py
File_IO/: CAN_file.txt  CMakeList.txt  CMakeLists.txt  File-Io.cpp  File_Io.cpp  File_Io.h  File_io  Makefile  Makefile.old  README.md
File_IO/app/src/: main.cpp
File_IO/built/: file_io
File_IO/lib/include/: File_IO.h  File_Io.h
File_IO/lib/src/: File_Io.cpp
File_IO/lib/ut/: test.cpp
Main_Components/: CMakeList.txt  CMakeLists.txt  Makefile  README.md  main.cpp  main.h
Main_Components/input/: README.md  signals.txt
Main_Components/src/: main.cpp  main.old.cpp  signals  signals.json  signals.txt
Main_Components/test/: README.md  input.txt  output.txt  test_mc.py
Note_and_Ideas/: Notes.txt  README.md
Python_Scripts/: Calculator.py  Calculator_gui.py  README.md
Python_Scripts/Calculator/: Calculator.py  Makefile
Python_Scripts/Calculator_Gui/: Calculator_gui.py  Makefile
Python_Scripts/Scientific_Calculator/: Makefile  Scientific_Calculator_gui.py
